--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
     "sass": "^1.34.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.8"
+    "@types/react": "^17.0.8",
+    "@types/react-slick": "^0.23.4"
   }
 }
