--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.0.1",
     "boxicons": "^2.0.7",
+    "gsap": "^3.6.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
