--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
+    "rsuite": "^4.10.2",
     "sass": "^1.34.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.3.2"
