--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-slick": "^0.28.1",
     "rsuite": "^4.10.2",
     "sass": "^1.34.0",
-    "slick-carousel": "^1.8.1",
-    "typescript": "^4.3.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.8",
