--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,15 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Crisp.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "components/Crisp.tsx",
+    "pages/_app.jsx",
+    "components/TechSlideComp.jsx",
+    "components/Navbar.jsx",
+    "pages/index.jsx"
+  ],
   "exclude": ["node_modules"]
 }
