--- a/package.json
+++ b/package.json
@@ -20,8 +20,5 @@
     "sass": "^1.34.0",
     "slick-carousel": "^1.8.1"
   },
-  "devDependencies": {
-    "@types/react": "^17.0.8",
-    "@types/react-slick": "^0.23.4"
-  }
+  "devDependencies": {}
 }
