--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "boxicons": "^2.0.7",
     "gsap": "^3.6.1",
     "next": "10.2.3",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-particles-js": "^3.6.0",
     "react-slick": "^0.28.1",
     "rsuite": "^4.10.2",
     "sass": "^1.34.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tsparticles": "^1.37.2"
   },
   "devDependencies": {}
 }
