--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--openssl-legacy-provider' next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -15,12 +15,10 @@
     "next": "10.2.3",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-particles-js": "^3.6.0",
     "react-slick": "^0.28.1",
     "rsuite": "^4.10.2",
     "sass": "^1.34.0",
-    "slick-carousel": "^1.8.1",
-    "tsparticles": "^1.37.2"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {}
 }
